Fixed border in dark mode, themes.css

--- a/components/themes/themes.css
+++ b/components/themes/themes.css
@@ -44,6 +44,7 @@
         --border: 240 3.7% 15.9%;
         --input: 240 3.7% 15.9%;
         --ring: 346.8 77.2% 49.8%;
+        --radius: 0.5rem;
     }
 
     [data-theme="zinc_light"] {
@@ -89,6 +90,7 @@
         --border: 240 3.7% 15.9%;
         --input: 240 3.7% 15.9%;
         --ring: 240 4.9% 83.9%;
+        --radius: 0.5rem;
     }
 
     [data-theme="slate_light"] {
@@ -134,6 +136,7 @@
         --border: 217.2 32.6% 17.5%;
         --input: 217.2 32.6% 17.5%;
         --ring: 212.7 26.8% 83.9;
+        --radius: 0.5rem;
     }
 
     [data-theme="stone_light"] {
@@ -162,7 +165,7 @@
     [data-theme="stone_dark"] {
         --background: 20 14.3% 4.1%;
         --foreground: 60 9.1% 97.8%;
-        --card: 20 14.3% 4.1%;
+        --card: hsla(15, 0%, 50%, 1);
         --card-foreground: 60 9.1% 97.8%;
         --popover: 20 14.3% 4.1%;
         --popover-foreground: 60 9.1% 97.8%;
@@ -179,6 +182,7 @@
         --border: 12 6.5% 15.1%;
         --input: 12 6.5% 15.1%;
         --ring: 24 5.7% 82.9%;
+        --radius: 0.5rem;
     }
 
     [data-theme="gray_light"] {
@@ -224,6 +228,7 @@
         --border: 215 27.9% 16.9%;
         --input: 215 27.9% 16.9%;
         --ring: 216 12.2% 83.9%;
+        --radius: 0.5rem;
     }
 
     [data-theme="neutral_light"] {
@@ -269,6 +274,7 @@
         --border: 0 0% 14.9%;
         --input: 0 0% 14.9%;
         --ring: 0 0% 83.1%;
+        --radius: 0.5rem;
     }
 
     [data-theme="red_light"] {
@@ -314,6 +320,7 @@
         --border: 0 0% 14.9%;
         --input: 0 0% 14.9%;
         --ring: 0 72.2% 50.6%;
+        --radius: 0.5rem;
     }
 
     [data-theme="orange_light"] {
@@ -359,6 +366,7 @@
         --border: 12 6.5% 15.1%;
         --input: 12 6.5% 15.1%;
         --ring: 20.5 90.2% 48.2%;
+        --radius: 0.5rem;
     }
 
     [data-theme="green_light"] {
@@ -404,6 +412,7 @@
         --border: 240 3.7% 15.9%;
         --input: 240 3.7% 15.9%;
         --ring: 142.4 71.8% 29.2%;
+        --radius: 0.5rem;
     }
 
     [data-theme="blue_light"] {
@@ -449,6 +458,7 @@
         --border: 217.2 32.6% 17.5%;
         --input: 217.2 32.6% 17.5%;
         --ring: 224.3 76.3% 48%;
+        --radius: 0.5rem;
     }
 
     [data-theme="yellow_light"] {
@@ -494,6 +504,7 @@
         --border: 12 6.5% 15.1%;
         --input: 12 6.5% 15.1%;
         --ring: 35.5 91.7% 32.9%;
+        --radius: 0.5rem;
     }
 
     [data-theme="violet_light"] {
@@ -539,6 +550,7 @@
         --border: 215 27.9% 16.9%;
         --input: 215 27.9% 16.9%;
         --ring: 263.4 70% 50.4%;
+        --radius: 0.5rem;
     }
 
 }
